--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       </header>
       <main>
         <div class="welcome_container">
-          <img src="./images/welcome.JPG" alt="welcome" />
+          <img src="./images/welcome.jpg" alt="welcome" />
           <p>Welcome to Sysken!</p>
         </div>
         <div class="contents_container">
